# zela-demo

./: .gitignore  Cargo.toml  PLAN.md  README.md  ZELA_FEEDBACK.md  run-procedure.sh  shell.nix
leader_routing/: Cargo.toml  README.md  build.rs
leader_routing/data/: accuracy_results.json  leader_geo.json  throughput_results.json
leader_routing/scripts/: fetch_schedule.py  load_test.sh  precompute_geo.py
leader_routing/src/: epoch.rs  geo.rs  lib.rs  region.rs  schedule.rs
leader_routing/tests/: accuracy_bench.rs  integration_test.rs  throughput_bench.rs
priority_fees/: Cargo.toml
priority_fees/src/: lib.rs
