[package]
name = "leader_routing"
version = "0.1.0"
edition = "2021"
description = "Zela procedure for leader-aware routing to minimize transaction latency"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Zela SDK
zela-std = { git = "https://github.com/Zela-io/zela-std.git", rev = "e5465e0e60ae6b690664408dbdd885fcdb867eab" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
rkyv = "0.7"

# PHF for O(1) lookups
phf = { version = "0.11", features = ["macros"] }

# Utilities
hex = "0.4"
log = "0.4"

[build-dependencies]
# Build-time codegen for PHF maps and epoch metadata
phf_codegen = "0.11"  # Generates PHF maps at compile time
rkyv = "0.7"          # Zero-copy serialization for epoch metadata
serde = { version = "1.0", features = ["derive"] }  # JSON deserialization
serde_json = "1.0"    # Parse schedule.json and leader_geo.json
bs58 = "0.5"          # Decode base58 validator pubkeys from leader_geo.json

[dev-dependencies]
# Testing & Benchmarking
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
bs58 = "0.5"
chrono = { version = "0.4", features = ["serde"] }

[features]
default = []
