[package]
name = "leader_routing"
version = "0.1.0"
edition = "2021"
description = "Zela procedure for leader-aware routing to minimize transaction latency"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Zela SDK
zela-std = { git = "https://github.com/Zela-io/zela-std.git", rev = "e5465e0e60ae6b690664408dbdd885fcdb867eab" }

# Serialization
serde = { version = "1.0", features = ["derive"] }

# PHF for O(1) lookups
phf = { version = "0.11", features = ["macros"] }

# Utilities
log = "0.4"

[build-dependencies]
# Build-time codegen for geo PHF map
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bs58 = "0.5"

[dev-dependencies]
# Testing
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
bs58 = "0.5"
hex = "0.4"

[features]
default = []
